--- a/index.html
+++ b/index.html
@@ -3038,6 +3038,8 @@ function confirmLayerDelete() {
   closeLayerDeleteModal();
 }
 
+  const isMobile = window.matchMedia('(max-width: 768px)').matches;
+
   let currentLocation = null;
   let currentMarker = null;
   const gpsIcon = L.divIcon({className:'gps-marker'});
@@ -3045,6 +3047,10 @@ function confirmLayerDelete() {
 
   function initGeolocation() {
     if (!navigator.geolocation) return;
+    const gpsLoading = document.getElementById('gpsLoadingMessage');
+    if (isMobile && gpsLoading) {
+      gpsLoading.style.display = 'block';
+    }
     navigator.geolocation.watchPosition(pos => {
       currentLocation = [pos.coords.latitude, pos.coords.longitude];
       if (!currentMarker) {
@@ -3056,7 +3062,15 @@ function confirmLayerDelete() {
       if (followGps) {
         map.setView(currentLocation, map.getZoom());
       }
-    }, err => console.error('geo error', err), { enableHighAccuracy: true });
+      if (isMobile && gpsLoading) {
+        gpsLoading.style.display = 'none';
+      }
+    }, err => {
+      console.error('geo error', err);
+      if (isMobile && gpsLoading) {
+        gpsLoading.style.display = 'none';
+      }
+    }, { enableHighAccuracy: true });
   }
 
   async function ensureMovingLayer() {
@@ -3311,6 +3325,7 @@ function confirmLayerDelete() {
   <img id="centerMarker" src="https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png" alt="center marker">
   <button id="savePinBtn">ZAPISZ PIN</button>
   <div id="pinSavedMessage">Zapisano pinezkę</div>
+  <div id="gpsLoadingMessage">Wczytuję lokalizację GPS...</div>
   <div id="mobilePinModal" class="mobile-modal">
     <div class="mobile-modal-content">
       <input type="text" id="mobilePinName" placeholder="Nazwa pinezki">
